# flappybird

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SDL_mixer.patch  build.bat  flappybird.c  main.c
Xcode/FlappyBird/FlappyBird.xcodeproj/: project.pbxproj
Xcode/FlappyBird/FlappyBird.xcodeproj/project.xcworkspace/xcuserdata/alex.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/FlappyBird/FlappyBird.xcodeproj/xcuserdata/alex.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Xcode/FlappyBird/FlappyBird.xcodeproj/xcuserdata/alex.xcuserdatad/xcschemes/: xcschememanagement.plist
Xcode/FlappyBird/FlappyBird/Assets.xcassets/AppIcon.appiconset/: Contents.json
